Fixed white line on mobile devices 3

--- a/src/app/ui/styles/divider.module.scss
+++ b/src/app/ui/styles/divider.module.scss
@@ -7,11 +7,11 @@
   padding: 20vh 0;
 }
 .partbot {
-  height: 55%;
+  height: 50%;
   clip-path: polygon(0 20%, 100% 0, 100% 100%, 0 100%);
   background-color: var(--main2);
   position: absolute;
-  bottom: 0%;
+  bottom: 5vh;
   width: 100%;
 }
 
